[gd_scene load_steps=4 format=3 uid="uid://cc1tjiqqptrmu"]

[ext_resource type="Script" uid="uid://x0ytj5iisx1u" path="res://test/test.gd" id="1_8a8pi"]
[ext_resource type="PackedScene" uid="uid://b73nxmjliu1xo" path="res://ui/game_over_container.tscn" id="2_65205"]
[ext_resource type="PackedScene" uid="uid://7caf5r6l7cj4" path="res://ui/top_players_container.tscn" id="3_65205"]

[node name="Test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8a8pi")

[node name="GameOverContainer" parent="." instance=ExtResource("2_65205")]
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_bottom = 12.0
grow_horizontal = 1
grow_vertical = 1

[node name="TopPlayersContainer" parent="." instance=ExtResource("3_65205")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_bottom = 387.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="high_scores" from="GameOverContainer" to="." method="_on_game_over_container_high_scores"]
